# LeannVault

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: index_leann.py  prepare_subset.py  search_leann.py
src/leannvault/: __init__.py
src/leannvault/cli/: __init__.py  main.py
src/leannvault/core/: __init__.py  extractors.py  indexer.py  searcher.py  tracker.py
src/leannvault/web/: __init__.py  api.py  ui.py
